Try to fix parallax choppiness and disable on mobile.

--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -20,8 +20,8 @@ box-shadow()
 a
   color: #00B7FF
 .border
-  border-top: 1px solid #ccc
-  border-bottom: 1px solid #ccc
+  border-top: 1px solid #ddd
+  border-bottom: 1px solid #ddd
 
 // 1
 .logo
@@ -42,20 +42,22 @@ a
   min-width: 1008px
   width: 100%
 .img-1
-  height: 550px
-  background: url("/img/blurry1.jpg") no-repeat center 93%
+  height: 450px
+  background: url("/img/blurry1.jpg") no-repeat center 100%
   background-size cover
+  transition: background-position 20ms linear;
 .img-2
   height: 320px
-  background: url("/img/blurry2.jpg") no-repeat center 93%
+  background: url("/img/blurry2.jpg") no-repeat center 100%
   background-size cover
+  transition: background-position 20ms linear;
 
 .lead
   max-width: 540px
   margin: 0 auto
 .hero
   padding: 1em
-  margin-top: 350px
+  margin-top: 250px
   width: 540px
   height: auto
   text-align: left
